<resources>
    <string name="app_name">墨猫速递</string>
    <string name="title_home">发布</string>
    <string name="title_delivery">送件</string>
    <string name="title_user">我的</string>
    <string name="login_form_title">登录</string>
    <string name="login_user_title">手机号</string>
    <string name="login_password_title">密码</string>
    <string name="login_button_title">登录</string>
    <string name="login_forget_password_title">忘记密码</string>
    <string name="register_title">注册</string>
    <string name="register_user_title" >手机号</string>
    <string name="register_password_title">密码</string>
    <string name="register_name_title">姓名</string>
    <string name="register_nick_title">昵称</string>
    <string name="register_vcode_title">短信验证码</string>
    <string name="register_vcode_btn_title">发送验证码</string>
    <string name="notification_confirm">确定</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
