<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@color/colorWhite"
    >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_form_background_rounded_style"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/register_user_title"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/register_form_username"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/edittext_rounded_style" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/register_password_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_form_password"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textPassword"
                android:background="@drawable/edittext_rounded_style" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/register_name_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_form_name"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_rounded_style" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/register_nick_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_form_nick"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_rounded_style" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/register_vcode_title"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <EditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/register_form_vcode"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edittext_rounded_style" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/register_vcode_btn_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/login_form_login_button"
                android:layout_width="270dp"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/register_title"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

</LinearLayout>
</ScrollView>