<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/colorWhite"
    >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_form_background_rounded_style"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_title"
                android:textSize="30sp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_user_title"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/register_title"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorForgetPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/login_form_username"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/edittext_rounded_style" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_password_title"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/login_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/login_forget_password_title"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorForgetPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <EditText
                android:id="@+id/login_form_password"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textPassword"
                android:background="@drawable/edittext_rounded_style" />

            <Button
                android:id="@+id/login_form_login_button"
                android:layout_width="270dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/login_form_title"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

</LinearLayout>
</ScrollView>